--- a/index.html
+++ b/index.html
@@ -23,20 +23,20 @@ System: class="instruction-btn">Інструкції</button>
                 <form id="telegramForm">
                     <div class="input-group">
                         <label for="field5">Назва товару:</label>
-                        <input type="text" id="field5" name="field5" placeholder="Коротко опишіть товар (не обов’язково)">
+                        <input type="text" id="field5" name="field5" placeholder="не обов’язково">
                     </div>
                     <div class="input-group">
                         <label for="field1">Ціна:</label>
-                        <input type="text" id="field1" name="field1" placeholder="Введіть кінцеву ціну (обов’язково)" required>
+                        <input type="text" id="field1" name="field1" placeholder="обов’язково" required>
                     </div>
                     
                     <div class="input-group">
                         <label for="field3">Додаткові умови:</label>
-                        <input type="text" id="field3" name="field3" placeholder="Вкажіть додаткові умови, якщо є (не обов’язково)">
+                        <input type="text" id="field3" name="field3" placeholder="не обов’язково">
                     </div>
                     <div class="input-group">
                         <label for="field4">Посилання:</label>
-                        <input type="text" id="field4" name="field4" placeholder="Вставте посилання на товар (обов’язково)" required>
+                        <input type="text" id="field4" name="field4" placeholder="Посилання на товар (обов’язково)" required>
                     </div>
                     <div class="input-group">
                         <label>
