--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <button type="button"
 
 System: class="instruction-btn">Інструкції</button>
-            <a href="https://t.me/+wPfCVW-7i-w3NWYy" target="_blank" class="instruction-img-link">
+            <a href="https://t.me/+Nmsg2YySEj8zYTVi" target="_blank" class="instruction-img-link">
                 <img src="https://raw.githubusercontent.com/DiscountsFromAli/X-CUBOT/main/images/znahidki.PNG" alt="Знахідки" class="instruction-img">
             </a>
             <div class="header-text">Ставайте співавтором каналу, діліться своїми знахідками!</div>
@@ -79,7 +79,7 @@ System: class="instruction-btn">Інструкції</button>
                 <p>♥️ Діліться товаром, щоб зробити когось таким же щасливчиком, як ви!</p>
                 <p>
                     <strong>Ваш товар буде опубліковано на каналі ЗНАХІДКИ</strong>
-                    <a href="https://t.me/+wPfCVW-7i-w3NWYy" target="_blank">https://t.me/+wPfCVW-7i-w3NWYy</a>
+                    <a href="https://t.me/+Nmsg2YySEj8zYTVi" target="_blank">https://t.me/+Nmsg2YySEj8zYTVi</a>
                 </p>
                 <p><br>シ Гарного настрою!</p>
             </div>
