--- a/index.html
+++ b/index.html
@@ -12,9 +12,8 @@
 <body>
     <div class="main-container">
         <div class="container">
-            <button type="button"
-
-System: class="instruction-btn">Інструкції</button>
+        <a href="https://t.me/+Nmsg2YySEj8zYTVi" target="_blank" class="instruction-btn">ЗНАХІДКИ</a>
+            <button type="button" System: class="instruction-btn">Інструкції</button>
             <a href="https://t.me/+Nmsg2YySEj8zYTVi" target="_blank" class="instruction-img-link">
                 <img src="https://raw.githubusercontent.com/DiscountsFromAli/X-CUBOT/main/images/znahidki.PNG" alt="Знахідки" class="instruction-img">
             </a>
