--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
 </head>
 <body>
     <div class="main-container">
-        <div class="container">
+    <div class="container">
         <a href="https://t.me/+Nmsg2YySEj8zYTVi" target="_blank" class="instruction-btn">ЗНАХІДКИ</a>
-            <button type="button" System: class="instruction-btn">Інструкції</button>
-            <a href="https://t.me/+Nmsg2YySEj8zYTVi" target="_blank" class="instruction-img-link">
-                <img src="https://raw.githubusercontent.com/DiscountsFromAli/X-CUBOT/main/images/znahidki.PNG" alt="Знахідки" class="instruction-img">
-            </a>
-            <div class="header-text">Ставайте співавтором каналу, діліться своїми знахідками!</div>
+        <button type="button" class="instruction-btn">Інструкції</button>
+        <a href="https://t.me/+Nmsg2YySEj8zYTVi" target="_blank" class="instruction-img-link">
+            <img src="https://raw.githubusercontent.com/DiscountsFromAli/X-CUBOT/main/images/znahidki.PNG" alt="Знахідки" class="instruction-img">
+        </a>
+        <div class="header-text">Ставайте співавтором каналу, діліться своїми знахідками!</div>
             <div class="block-form">
                 <form id="telegramForm">
                     <div class="input-group">
