--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <form id="telegramForm">
                     <div class="input-group">
                         <label for="field1">Ціна:</label>
-                        <input type="text" id="field1" name="field1" placeholder="обов’язково" required>
+                        <input type="text" id="field1" name="field1" placeholder="Тільки цифри (обов’язково)" required>
                     </div>
                     <div class="input-group">
                         <label for="field4">Посилання:</label>
@@ -34,7 +34,7 @@
                     </div>                     
                     <div class="input-group">
                         <label for="field3">Додаткові умови:</label>
-                        <input type="text" id="field3" name="field3" placeholder="не обов’язково">
+                        <input type="text" id="field3" name="field3" placeholder="Доставка, тощо (не обов’язково)">
                     </div>                    
                     <div class="input-group">
                         <label>
