--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                 <p>✅ У полі "Ціна" вказуйте ціну та валюту.</p>
                 <p>✅ У полі "Знижка" вказуйте розмір знижки (за монети, без монет).</p>
                 <p>✅ Поле "Додаткові умови" необов’язкове, вказуйте купони чи інші умови.</p>
-                <p>✅ У полі "Посилання" вставляйте посилання з мобільного додатку ("https://a.aliexpress.com/...; https://s.click.aliexpress.com/...") або сайту ("https://www.aliexpress.com/...").</p>
+                <p>✅ У полі "Посилання" вставляйте посилання з мобільного додатку ("https://a.aliexpress.com/...; https://s.click.aliexpress.com/...") або сайту ("https://www.aliexpress.com/...").</p><br>
                 
                 <p>♥️ Діліться товаром, щоб зробити когось таким же щасливчиком, як ви!</p>
                 <p>
