--- a/index.html
+++ b/index.html
@@ -70,10 +70,9 @@
             <div class="iheader-text" id="instructions">Інструкції</div>
             <div class="instructions-text">
                 <p>✅ У полі "Ціна" вказуйте тільки ціну, округлену без десятих.</p>
-                <p>✅ У полі "Посилання" вставляйте посилання з мобільного додатку ("https://a.aliexpress.com/...; https://s.click.aliexpress.com/...") або сайту ("https://www.aliexpress.com/...").</p><br>
+                <p>✅ У полі "Посилання" вставляйте посилання з мобільного додатку ("https://a.aliexpress.com/...; https://s.click.aliexpress.com/...") або сайту ("https://www.aliexpress.com/...").</p>
                 <p>✅ Поле "Назва" необов’язкове, вказуйте назву або інші характеристики (кількість, колір тощо)</p>
-                <p>✅ Поле "Додаткові умови" необов’язкове, вказуйте розділ (монети,рання тощо), купони чи інші умови.</p>              
-                
+                <p>✅ Поле "Додаткові умови" необов’язкове, вказуйте розділ (монети,рання тощо), купони чи інші умови.</p><br>             
                 <p>♥️ Діліться товаром, щоб зробити когось таким же щасливчиком, як ви!</p>
                 <p>
                     <strong>Ваш товар буде опубліковано на каналі ЗНАХІДКИ</strong>
