--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     </div>
                     <div class="input-group">
                         <label for="field5">Назва товару:</label>
-                        <input type="text" id="field5" name="field5" placeholder="не обов’язково">
+                        <input type="text" id="field5" name="field5" placeholder=(кількість, колір тощо) "не обов’язково">
                     </div>                     
                     <div class="input-group">
                         <label for="field3">Додаткові умови:</label>
