--- a/index.html
+++ b/index.html
@@ -30,11 +30,11 @@
                     </div>
                     <div class="input-group">
                         <label for="field5">Назва товару:</label>
-                        <input type="text" id="field5" name="field5" placeholder="Монети, рання, доставка, тощо, (не обов’язково)">
+                        <input type="text" id="field5" name="field5" placeholder="Кількість, колір тощо, (не обов’язково)">
                     </div>                     
                     <div class="input-group">
                         <label for="field3">Додаткові умови:</label>
-                        <input type="text" id="field3" name="field3" placeholder="Доставка, тощо (не обов’язково)">
+                        <input type="text" id="field3" name="field3" placeholder="Монети, рання, доставка тощо (не обов’язково)">
                     </div>                    
                     <div class="input-group">
                         <label>
