--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                     <input type="text" id="field4" name="field4" placeholder="Посилання на товар (обов’язково)" required>
                 </div>
                 <div class="input-group">
-                    <label for="field5">Опис товару:</label>
+                    <label for="field5">Характеристики:</label>
                     <input type="text" id="field5" name="field5" placeholder="Кількість, колір тощо, (не обов’язково)">
                 </div>                     
                 <div class="input-group">
@@ -73,7 +73,7 @@
         <div class="instructions-text">
             <p>✅ У полі "Ціна" вказуйте тільки ціну, округлену без десятих.</p>
             <p>✅ У полі "Посилання" вставляйте посилання з мобільного додатку ("https://a.aliexpress.com/...; https://s.click.aliexpress.com/...") або сайту ("https://www.aliexpress.com/...").</p>
-            <p>✅ Поле "Опис товару" необов’язкове, вказуйте назву або інші характеристики (кількість, колір тощо)</p>
+            <p>✅ Поле "Характеристики" необов’язкове, вказуйте назву або інші характеристики (кількість, колір тощо)</p>
             <p>✅ Поле "Додаткові умови" необов’язкове, вказуйте розділ (монети,рання тощо), купони чи інші умови.</p><br>             
             <p>♥️ Діліться товаром, щоб зробити когось таким же щасливчиком, як ви!</p>
             <p>
