--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="main-container">
     <div class="container">
         <a href="https://t.me/+Nmsg2YySEj8zYTVi" target="_blank" class="znahidka-btn">ЗНАХІДКИ</a>
-        <button type="button" class="instruction-btn">Інструкції</button>
+        <button type="button" class="instruction-btn">ІНСТРУКЦІЇ</button>
         <a href="https://t.me/+Nmsg2YySEj8zYTVi" target="_blank" class="instruction-img-link">
             <img src="https://raw.githubusercontent.com/DiscountsFromAli/X-CUBOT/main/images/znahidki.PNG" alt="Знахідки" class="instruction-img">
         </a>
