--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                 <input type="checkbox" id="themeToggle">
                 <span class="slider"></span>
             </label>
-            <span class="theme-label">НІЧ</span>
+            <span class="theme-label">NIGHT ON</span>
         </div>
         <button class="scroll-top-btn" onclick="scrollToTop()">Вгору</button>
     </div>
